Añadida funcionalidad de introducir url para sacar contexto
